Create Java-8-compatible variant