@@ -1,6 +1,8 @@
 package org.codefx.courses.java8.stream.repo;
 
 import java.time.ZonedDateTime;
+import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -11,12 +13,15 @@ import static java.time.ZonedDateTime.now;
 
 public class OrderRepository {
 
-	private static final Map<Integer, Order> ORDER_DB = Map.of(
-			1, new Order(1, now().minusDays(20), 1, List.of(1, 2)),
-			2, new Order(2, now().minusDays(15), 1, List.of(2, 3)),
-			3, new Order(3, now().minusDays(10), 3, List.of(1, 3)),
-			4, new Order(4, now().minusDays(5), 2, List.of(1))
-	);
+	private static final Map<Integer, Order> ORDER_DB;
+
+	static {
+		ORDER_DB = new HashMap<>();
+		ORDER_DB.put(1, new Order(1, now().minusDays(20), 1, Arrays.asList(1, 2)));
+		ORDER_DB.put(2, new Order(2, now().minusDays(15), 1, Arrays.asList(2, 3)));
+		ORDER_DB.put(3, new Order(3, now().minusDays(10), 3, Arrays.asList(1, 3)));
+		ORDER_DB.put(4, new Order(4, now().minusDays(5), 2, Arrays.asList(1)));
+	}
 
 	public Set<Integer> loadOrderIds() {
 		return ORDER_DB.keySet();
